[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
tokio = { version = "1", features = [
    "rt", 
    "rt-multi-thread", 
    "net", 
    "time", 
    "macros", 
    "sync", 
    "parking_lot", 
    "signal"] }
async-stream = { version = "0.3" }
tonic = { version = "0.9", features = ["tls", "tls-roots"] }
prost = { version = "0.11" }
prost-types = { version = "0.11" }
async-trait = { version = "0.1" }
anyhow = { version = "1" }
bytes = "1"
futures = "0.3"

[build-dependencies]
tonic-build = { version = "0.9" }